tests/fixtures/valid/users.bprint
{
  "schemaVersion": "v1",
  "namespace": "acme.users",
  "description": "User account information",
  "entity": {
    "primaryKey": { "partitionKey": "userId" },
    "fields": [
      { "name": "userId", "type": "string", "required": true },
      { "name": "email", "type": "string", "required": true },
      { "name": "name", "type": "string", "required": true },
      { "name": "active", "type": "boolean", "required": false, "default": true },
      { "name": "createdAt", "type": "timestamp", "required": true }
    ]
  }
}
